# 2018

./: .gitignore  LICENSE  README.md
.metadata/: version.ini
.metadata/.plugins/org.eclipse.cdt.core/: Pressure Sensors.1521294466038.pdom  Pressure Sensors.language.settings.xml
.metadata/.plugins/org.eclipse.core.resources/.root/: 1.tree
.metadata/.plugins/org.eclipse.core.resources/.root/.indexes/: properties.index
.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
.metadata/.plugins/org.eclipse.epp.logging.aeri.ide/org.eclipse.epp.logging.aeri.ide.server/: server-config.json
.metadata/.plugins/org.eclipse.ui.workbench/: workingsets.xml
C++/RobotControl/: .cproject
C++/RobotControl/src/: MPX4250AP.cpp  MPX4250AP.h  RobotControl.cpp  Thruster.cpp  Thruster.h
C++/RobotControl/src/control/: Maestro.cpp  Maestro.h  MaestroChannel.cpp  MaestroChannel.h
CppRovClass/: RovSimulatorGame.cpp
EasternEdgeGUI2/: rovWindow.cpp  rovWindow.h
Pressure Sensors/: .cproject  .project
Python/: ContourMethod.py  Test.py
moos-ivp-extend/.svn/: wc.db
moos-ivp-extend/src/: CMakeLists.txt
moos-ivp-extend/src/pRasPi/: CMakeLists.txt  RasPi.cpp  RasPi.h  RasPi_Info.cpp  RasPi_Info.h  SerialPort.cpp  SerialPort.h  main.cpp  pRasPi.moos  writeSerial.cpp
moos-ivp-extend/src/pTopside/: CMakeLists.txt  Topside.cpp  Topside.h  Topside_Info.cpp  Topside_Info.h  main.cpp  pTopside.moos
moos-ivp/.svn/: wc.db
(+11 files in other folders)
